# autoeit_humanai

./: .gitignore  AutoEIT_Pipeline.ipynb  README.md  eit_segmentation_v3.ipynb  eit_transcription.ipynb  pyproject.toml  requirements-faster-whisper.txt  requirements-mlx.txt  requirements-whispercpp.txt  requirements.txt  setup.py
configs/: default.yaml  stimulus_alignment.yaml  whisper_cpp.yaml
data/stimulus_audio/: extraction_metadata.json
eit_output_v3/: batch_transcription_summary.csv
eit_output_v3/038010_2A_preprocessed/: segments.csv
eit_output_v3/038010_2A_preprocessed/transcriptions/: drift_correction_summary.json  drift_report.csv  transcription_checkpoint.json  transcriptions.csv  transcriptions_drift_corrected.csv
eit_output_v3/038011_1A_preprocessed/: segments.csv
eit_output_v3/038011_1A_preprocessed/transcriptions/: transcription_checkpoint.json  transcriptions.csv
eit_output_v3/038012_2A_preprocessed/: segments.csv
eit_output_v3/038015_1A_preprocessed/: segments.csv
src/autoeit/: __init__.py  __main__.py  config.py  diarization.py  evaluation.py  experiment_logger.py  output.py  pipeline.py  postprocessing.py  preprocessing.py  segmentation.py
src/autoeit/asr/: __init__.py  (+5 more)
src/eit_pipeline/: __init__.py  __main__.py  asr_transcription.py  audio_io.py  config.py  diarization_filter.py  evaluation.py  leakage_check.py  output.py  pipeline_runner.py  response_window.py  silence_detection.py  stimulus_alignment.py  stimulus_extractor.py  vad_refinement.py
tests/eit_pipeline/: test_config.py  test_pipeline.py  test_stimulus_alignment.py
(+12 files in other folders)
